# modl

./: CHANGELOG.md  CONTRIBUTING.md  README.md  diff_report_template.md  pyproject.toml
src/modl/: __init__.py  cli.py  config.py  ir.py  ledger.py  models.py  sync.py
tests/: README.md  test_cli.py  test_config.py  test_ir.py  test_ledger.py  test_models.py  test_modl.py  test_sync.py
